--- a/.github/workflows/llvmlite_osx-64_wheel_builder.yml
+++ b/.github/workflows/llvmlite_osx-64_wheel_builder.yml
@@ -219,12 +219,12 @@ jobs:
           # Debug pip information first
           echo "=== Initial Pip Information ==="
           python3 -m pip debug --verbose
-          
+
           # Try to install with verbose output
           echo "=== Attempting pip install with verbose output ==="
-          $PYTHON_PATH -m pip install -v dist/*.whl
+          python3 -m pip install -v dist/*.whl
           
           # Basic import test
-          $PYTHON_PATH -c "import llvmlite.binding as llvm; print(f'LLVM version: {llvm.get_version()}')"
+          python3 -c "import llvmlite.binding as llvm; print(f'LLVM version: {llvm.get_version()}')"
           # Run full test suite
-          $PYTHON_PATH -m llvmlite.tests
+          python3 -m llvmlite.tests
