add --dylibs-path option to delocate-wheel command in llvmlite osx-64 wheel builder workflow for improved library path handling

--- a/.github/workflows/llvmlite_osx-64_wheel_builder.yml
+++ b/.github/workflows/llvmlite_osx-64_wheel_builder.yml
@@ -92,7 +92,8 @@ jobs:
 
           # Run delocate, telling it where to find conda libs and where to output
           # Use -v for verbose output, -d to show dependencies
-          delocate-wheel -v -d -L $CONDA_PREFIX/lib -w dist_repaired "$whl"
+          # Add --dylibs-path .dylibs to explicitly set the target lib folder within the wheel
+          delocate-wheel -v -d --dylibs-path .dylibs -L $CONDA_PREFIX/lib -w dist_repaired "$whl"
 
           echo "=== Repaired wheel filename ==="
           ls -la dist_repaired/*.whl
