--- a/.github/workflows/llvmlite_osx-64_wheel_builder.yml
+++ b/.github/workflows/llvmlite_osx-64_wheel_builder.yml
@@ -226,7 +226,7 @@ jobs:
           echo "Processing wheel: $whl"
           
           # Remove all ABI tags
-          python -m wheel tags --abi-tag=none "$whl"
+          python -m wheel tags --remove --abi-tag=none "$whl"
           
           echo "=== Wheel tags after removal ==="
           python -m wheel tags "$whl"
